Correctly set the alpha of a hardware layer before drawing it. Bug #3410819
Change-Id: I3ebaca2233f4edf5b59d84ec7706555056a1a4b1

--- a/tests/HwAccelerationTest/AndroidManifest.xml
+++ b/tests/HwAccelerationTest/AndroidManifest.xml
@@ -78,6 +78,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+                android:name="ViewLayersActivity4"
+                android:label="_ViewLayers4">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         
         <activity
                 android:name="AlphaLayersActivity"
