Added tests for WebView accessibility no JS
bug:3421690

This change is related to change:Idfec7e6a

1. Added tests for cases in which the previous
   implementation was not behaving as expected.

2. Refatered the tests to be intrumentation tests
   since the code under tests uses the DOM element
   dimensions to determine visibility and if the
   the WebView has no size i.e. not attached to
   ViewRoot the size of all DOM elements is zero
   forcing all tests to fail.

Change-Id: Ib4c01af8feb09f2b2a6b9d906e08bfaaa9e9bc74

--- a/core/tests/coretests/AndroidManifest.xml
+++ b/core/tests/coretests/AndroidManifest.xml
@@ -1210,6 +1210,13 @@
                 android:authorities="android.app.SuggestionProvider">
         </provider>
 
+        <activity android:name="android.webkit.AccessibilityInjectorTestActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.FRAMEWORK_INSTRUMENTATION_TEST" />
+            </intent-filter>
+        </activity>
+
     </application>
 
     <instrumentation android:name="android.test.InstrumentationTestRunner"
