Remove the old media player stress test. Add the new playback stress that which caputred the total number of crashes, frame drops from a list of video which side-loaded to the device.
Change-Id: I41d54b5286da0aecb52a37feec176d8ae5456d9e

--- a/media/tests/MediaFrameworkTest/AndroidManifest.xml
+++ b/media/tests/MediaFrameworkTest/AndroidManifest.xml
@@ -58,4 +58,9 @@
          android:label="Media Power tests InstrumentationRunner">
      </instrumentation>
 
+     <instrumentation android:name=".MediaPlayerStressTestRunner"
+         android:targetPackage="com.android.mediaframeworktest"
+         android:label="Media Power tests InstrumentationRunner">
+     </instrumentation>
+
 </manifest>
